// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management list item component when item appears in view after image is loaded renders media broken icon when image onerror triggered 1`] = `
<gl-icon-stub
  name="media-broken"
  size="32"
  variant="subtle"
/>
`;

exports[`Design management list item component with notes renders item with multiple comments 1`] = `
<a
  class="focus:gl-focus gl-block gl-rounded-base gl-text-default hover:gl-text-default"
>
  <gl-card-stub
    bodyclass="gl-p-0 gl-flex gl-w-full gl-bg-default gl-py-3 gl-px-4 gl-rounded-base"
    class="design-list-item gl-mb-0 js-design-list-item"
    footerclass=""
    headerclass="gl-p-0 gl-flex gl-grow gl-items-center gl-justify-center gl-overflow-hidden gl-relative gl-rounded-t-base"
  >
    <gl-intersection-observer-stub
      class="gl-flex gl-grow gl-items-center gl-justify-center"
      data-qa-filename="test"
      data-testid="design-image"
    >
      <img
        alt="test"
        class="design-img gl-block gl-max-h-full gl-max-w-full gl-mx-auto gl-w-auto"
        data-testid="design-img-1"
        src="null"
      />
    </gl-intersection-observer-stub>
    <div
      class="gl-flex gl-flex-col str-truncated-100"
      data-testid="design-file-name"
    >
      <span
        class="gl-font-semibold str-truncated-100"
        data-testid="design-img-filename-1"
        title="test"
      >
        test
      </span>
      <span
        class="str-truncated-100"
      >
        Updated
        <timeago-stub
          cssclass=""
          datetimeformat="asDateTime"
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
    <div
      class="gl-flex gl-gap-2 gl-items-center gl-ml-auto gl-text-subtle"
    >
      <gl-icon-stub
        name="comments"
        size="16"
        variant="current"
      />
      <span
        aria-label="2 comments"
      >
        2
      </span>
    </div>
  </gl-card-stub>
</a>
`;

exports[`Design management list item component with notes renders item with single comment 1`] = `
<a
  class="focus:gl-focus gl-block gl-rounded-base gl-text-default hover:gl-text-default"
>
  <gl-card-stub
    bodyclass="gl-p-0 gl-flex gl-w-full gl-bg-default gl-py-3 gl-px-4 gl-rounded-base"
    class="design-list-item gl-mb-0 js-design-list-item"
    footerclass=""
    headerclass="gl-p-0 gl-flex gl-grow gl-items-center gl-justify-center gl-overflow-hidden gl-relative gl-rounded-t-base"
  >
    <gl-intersection-observer-stub
      class="gl-flex gl-grow gl-items-center gl-justify-center"
      data-qa-filename="test"
      data-testid="design-image"
    >
      <img
        alt="test"
        class="design-img gl-block gl-max-h-full gl-max-w-full gl-mx-auto gl-w-auto"
        data-testid="design-img-1"
        src="null"
      />
    </gl-intersection-observer-stub>
    <div
      class="gl-flex gl-flex-col str-truncated-100"
      data-testid="design-file-name"
    >
      <span
        class="gl-font-semibold str-truncated-100"
        data-testid="design-img-filename-1"
        title="test"
      >
        test
      </span>
      <span
        class="str-truncated-100"
      >
        Updated
        <timeago-stub
          cssclass=""
          datetimeformat="asDateTime"
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
    <div
      class="gl-flex gl-gap-2 gl-items-center gl-ml-auto gl-text-subtle"
    >
      <gl-icon-stub
        name="comments"
        size="16"
        variant="current"
      />
      <span
        aria-label="1 comment"
      >
        1
      </span>
    </div>
  </gl-card-stub>
</a>
`;
